@startuml
'https://plantuml.com/class-diagram

abstract class StoreInterface
{
+buy_product()
+sell_product()
}

class Store{
-products:[]
+__init__()
+buy_product()
+sell_product()
}

class OnlineStore{
+__init__()
+buy_product()
}
class PhysicalStore{
+__init__()
}

StoreInterface <|-- Store
Store<--OnlineStore
Store<--PhysicalStore

@enduml